--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -74,5 +74,9 @@
     <servlet-name>DruidStatView</servlet-name>
     <url-pattern>/druid/*</url-pattern>
   </servlet-mapping>
+  
+  <welcome-file-list>
+    <welcome-file>/index</welcome-file>
+  </welcome-file-list>
 
 </web-app>
