用户列表，管理员修改密码

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,6 +1,6 @@
 jdbc.driverLocation=G:/mysql-connector-java-5.1.6.jar
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.driverUrl=jdbc:mysql://localhost:3306/boot_ptp?useUnicode=true&amp;characterEncoding=utf-8&amp;useSSL=false&amp;allowMultiQueries=true
+jdbc.driverUrl=jdbc:mysql://localhost:3306/p2p?useUnicode=true&amp;characterEncoding=utf-8&amp;useSSL=false&amp;allowMultiQueries=true
 #jdbc.driverUrl=jdbc:mysql://192.168.3.123:3306/d_p2p?useUnicode=true&amp;characterEncoding=utf-8&amp;useSSL=false&amp;allowMultiQueries=true
 jdbc.user=root
 jdbc.password=123456
