--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,11 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.baidu</groupId>
+            <artifactId>ueditor</artifactId>
+            <version>1.1.2</version>
+        </dependency>
 
     </dependencies>
 
