--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <junit.version>4.12</junit.version>
         <shiro.version>1.3.2</shiro.version>
         <shiro-crypto.version>1.4.0</shiro-crypto.version>
+        <jstl-version>1.2</jstl-version>
     </properties>
 
     <dependencies>
@@ -223,6 +224,12 @@
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
             <version>2.3.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>${jstl-version}</version>
         </dependency>
 
     </dependencies>
