--- a/pom.xml
+++ b/pom.xml
@@ -207,11 +207,11 @@
             <scope>provided</scope>
         </dependency>
 
-        <dependency>
-            <groupId>com.baidu</groupId>
-            <artifactId>ueditor</artifactId>
-            <version>1.1.2</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.baidu</groupId>-->
+            <!--<artifactId>ueditor</artifactId>-->
+            <!--<version>1.1.2</version>-->
+        <!--</dependency>-->
 
         <!--定时任务-->
         <dependency>
