--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -7,7 +7,7 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 #jdbc.driverUrl=jdbc:mysql://localhost:3306/p2p?useUnicode=true&amp;characterEncoding=utf-8&amp;useSSL=false&amp;allowMultiQueries=true
 #=======
 #>>>>>>> Stashed changes
-jdbc.driverUrl=jdbc:mysql://localhost:3306/boot_ptp?useUnicode=true&amp;characterEncoding=utf-8&amp;useSSL=false&amp;allowMultiQueries=true
+jdbc.driverUrl=jdbc:mysql://localhost:3306/p2p?useUnicode=true&amp;characterEncoding=utf-8&amp;useSSL=false&amp;allowMultiQueries=true
 jdbc.user=root
 jdbc.password=123456
 #jdbc.password=root
