--- a/pom.xml
+++ b/pom.xml
@@ -242,6 +242,12 @@
             <version>${poi.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.44</version>
+        </dependency>
+
     </dependencies>
 
     <build>
